Fix awful off-center nonsense

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,8 +121,8 @@ a {
     font-size: 5rem;
     color: white;
     text-transform: uppercase;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 
 .about-more-txt {
@@ -262,7 +262,7 @@ a {
   background-image: url('./assets/1.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
 .second-img {
@@ -270,7 +270,7 @@ a {
   background-image: url('./assets/2.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
 .third-img {
@@ -278,7 +278,7 @@ a {
   background-image: url('./assets/3.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
 .fourth-img {
@@ -286,16 +286,23 @@ a {
   background-image: url('./assets/4.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
+.pic-container {
+  display: flex;
+  justify-content: center;
+  width: 60vw;
+  margin: auto;
+}
 .itunes-pic {
   margin: auto;
   background-image: url('./assets/itunes.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
-  width: 60vw;
+  height: 80vh;
+  width: 80vw;
+  align-self: center;
 }
 .carousel {
   width: 60vw;
@@ -339,7 +346,7 @@ a {
   background-image: url('./assets/free-1.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
 .free-2 {
@@ -347,7 +354,7 @@ a {
   background-image: url('./assets/free-2.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
 .free-3 {
@@ -355,7 +362,7 @@ a {
   background-image: url('./assets/free-3.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 80vh;
 }
 
 @keyframes gradients {
@@ -380,7 +387,7 @@ $dbs: #055080;
     // align-items: center;
     flex-flow: column wrap;
     width: 30vw;
-    height: 80vh;
+    height: 80%;
     margin: auto;
     // justify-content: center;
   
